05-ICP-Lab-TLS-Security-1/helloworld-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: helloworld-ingress-tls
 annotations:
   kubernetes.io/ingress.class: "nginx"
   ingress.kubernetes.io/rewrite-target: "/"
spec:
 tls:
 # k8s ingress defines different tls certificates
 # for each nginx server blocks.
 # k8s ingress default cert is used if
 # no host-specific secret specified
 - hosts:
 # this is the fully-qualified domain name
 # of the first server block
   - hello.9.202.178.184.nip.io
   # certificate hello-k8s-ingress-tls-1
   # is only used by foo1.bar1
   secretName: helloworld-tls-certs
 rules:
   # each server block redirects request
   # to its own backend service
 - host: helloworld.x.x.x.x.nip.io
   http:
     paths:
     - backend:
         serviceName: helloworld
         servicePort: 5000
